<resources>
    <string name="search_hint">Search…</string>
    <string name="no_result_found">Results not found</string>
    <string name="select_country">Select country</string>
    <string name="dismiss_button_content_description">Dismiss</string>
    <string name="clear_search_button_content_description">Clear search</string>
    <string name="enter_mobile_no">Enter Mobile No.</string>
    <string name="done">Done</string>
</resources>
